objects/Address__c.object
<CustomObject>
    <description>This object tracks the Location Address of customer, only 1 location address per customer</description>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>02</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alley__c</fullName>
        <label>Alley</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Number__c</fullName>
        <label>Box Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <label>CIS ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country_code__c</fullName>
        <label>Country code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Number_Encrypt__c</fullName>
        <label>House Number</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Original_Code_from_CIS__c</fullName>
        <label>Original Code from CIS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_Name__c</fullName>
        <label>Place Name</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <label>Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_District__c</fullName>
        <label>Sub-District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Village_Number__c</fullName>
        <label>Village Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <label>Village</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADR-{00000000}</displayFormat>
        <label>Address REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>